--- a/sudoku-solver/src/styles/partials/_button.scss
+++ b/sudoku-solver/src/styles/partials/_button.scss
@@ -26,7 +26,7 @@
     left: 0;
     width: 30%;
     height: 100%;
-    background-image: url("yoda.jpg");
+    background-image: url("../../assets/yoda.jpg");
     background-size: cover;
     background-position: center;
     transform: translateX(-100%);
@@ -39,7 +39,7 @@
     right: 0;
     width: 30%;
     height: 30%;
-    background-image: url("force.jpg");
+    background-image: url("../../assets/force.jpg");
     background-size: cover;
     background-position: center;
   }
