--- a/sudoku-solver/src/styles/partials/_button.scss
+++ b/sudoku-solver/src/styles/partials/_button.scss
@@ -1,8 +1,24 @@
 .btn-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.reset-btn {
+  width: 60%;
+  height: 2rem;
+  margin-top: 1.5rem;
+  margin-inline: 0.5rem;
+  padding: 0.1rem;
+  background-color: #15f2fd;
+  font-size: xx-large;
+  font-weight: 700;
+  color: black;
+  border: none;
+  box-shadow: 0 6px 30px #15f2fd;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 1rem;
 }
 .btn {
   width: 60%;
@@ -13,9 +29,9 @@
   background-color: #2ff924;
   font-size: xx-large;
   font-weight: 700;
-  color: #fff;
+  color: black;
   border: none;
-  box-shadow: 0 6px 50px #2ff924;
+  box-shadow: 0 6px 30px #2ff924;
   border-radius: 0.5rem;
   cursor: pointer;
   font-size: 1rem;
